--- a/tex/jrss-version/old/state-learner-jrss-style.tex
+++ b/tex/jrss-version/old/state-learner-jrss-style.tex
@@ -1,77 +1,18 @@
-%%
-%% Copyright 2022 OXFORD UNIVERSITY PRESS
-%%
-%% This file is part of the 'oup-authoring-template Bundle'.
-%% ---------------------------------------------
-%%
-%% It may be distributed under the conditions of the LaTeX Project Public
-%% License, either version 1.2 of this license or (at your option) any
-%% later version.  The latest version of this license is in
-%%    http://www.latex-project.org/lppl.txt
-%% and version 1.2 or later is part of all distributions of LaTeX
-%% version 1999/12/01 or later.
-%%
-%% The list of all files belonging to the 'oup-authoring-template Bundle' is
-%% given in the file `manifest.txt'.
-%%
-%% Template article for OXFORD UNIVERSITY PRESS's document class `oup-authoring-template'
-%% with bibliographic references
-%%
+\documentclass{statsoc}
+\usepackage[a4paper]{geometry}
 
-%%%CONTEMPORARY%%%
-% \documentclass[unnumsec,webpdf,contemporary,large]{oup-authoring-template}%
-\documentclass[unnumsec,webpdf,contemporary,large,namedate]{oup-authoring-template}% uncomment this line for author year citations and comment the above
-%\documentclass[unnumsec,webpdf,contemporary,medium]{oup-authoring-template}
-%\documentclass[unnumsec,webpdf,contemporary,small]{oup-authoring-template}
+\usepackage{natbib, dsfont, enumitem,
+  amssymb,soul,xcolor,amsmath,graphicx,verbatim,pgfplots,tikz,prodint,booktabs}
 
-%%%MODERN%%%
-%\documentclass[unnumsec,webpdf,modern,large]{oup-authoring-template}
-% \documentclass[unnumsec,webpdf,modern,large,namedate]{oup-authoring-template}% uncomment this line for author year citations and comment the above
-%\documentclass[unnumsec,webpdf,modern,medium]{oup-authoring-template}
-%\documentclass[unnumsec,webpdf,modern,small]{oup-authoring-template}
+\usepackage[tablesonly,heads,nolists]{endfloat}
 
-%%%TRADITIONAL%%%
-%\documentclass[unnumsec,webpdf,traditional,large]{oup-authoring-template}
-% \documentclass[unnumsec,webpdf,traditional,large,namedate]{oup-authoring-template}% uncomment this line for author year citations and comment the above
-%\documentclass[unnumsec,namedate,webpdf,traditional,medium]{oup-authoring-template}
-%\documentclass[namedate,webpdf,traditional,small]{oup-authoring-template}
-
-\onecolumn % for one column layouts
-
-%\usepackage{showframe}
-
-% \graphicspath{{Fig/}}
-
-% line numbers
-%\usepackage[mathlines, switch]{lineno}
-%\usepackage[right]{lineno}
-
-\theoremstyle{thmstyleone}%\
-\newtheorem{theorem}{Theorem}%  meant for continuous numbers
-%%\newtheorem{theorem}{Theorem}[section]% meant for sectionwise numbers
-%% optional argument [theorem] produces theorem numbering sequence instead of independent numbers for Proposition
-% \newtheorem{proposition}[theorem]{Proposition}%
-% to get separate numbers for theorem and proposition etc.:
-\newtheorem{proposition}{Proposition}
+%% Theorem environment
+% \theoremstyle{plain} % plain italic style
+\newtheorem{theorem}{Theorem}
+% \numberwithin{theorem}{section}
 \newtheorem{lemma}{Lemma}
+\newtheorem{proposition}{Proposition}
 \newtheorem{corollary}{Corollary}
-\theoremstyle{thmstyletwo}%
-\newtheorem{example}{Example}%
-\newtheorem{remark}{Remark}%
-\theoremstyle{thmstylethree}%
-\newtheorem{definition}{Definition}
-
-
-
-%% OLD
-
-% \usepackage{natbib, dsfont,
-% amssymb,soul,xcolor,amsmath,graphicx,verbatim,pgfplots,tikz,prodint,booktabs}
-
-\usepackage{dsfont, booktabs}
-
-% \usepackage[tablesonly,heads,nolists]{endfloat}
-
 
 %% Only for comments:
 \usepackage[author=]{fixme}
@@ -80,11 +21,21 @@
 \definecolor{fxnote}{rgb}{.5,.5,.5}
 \fxsetup{status=draft}
 
-% \bibliographystyle{rss}
+\bibliographystyle{rss}
 
 %% Toggle with or without figures
 % \def\nofig{1}
 
+%% TODO: Update figures with name 'figure-'.
+%% Write macro for including figure or not.
+
+% \newcommand{\includeFigCond}[2]{
+%   \ifx\nofig\undefined %
+%     \includegraphics[#1]{#2} %
+%   \else %
+%     \texttt{#2} %
+%   \fi %
+% }
 \newcommand{\includeFigCond}[2][]{
   \ifx\nofig\undefined %
     \includegraphics[#1]{#2} %
@@ -127,66 +78,42 @@
 
 \newcommand{\data}{\ensuremath{\mathcal{D}}}
 
+\title[The state learner]{The state learner \\ {-- a super learner for right-censored data}}
+\author{Anders Munch}
+\address{Section of Biostatistics, University of Copenhagen, Copenhagen, Denmark}
+\email{a.munch@sund.ku.dk}
+\author[Munch {\it et al.}]{Thomas A.\ Gerds}
+\address{Section of Biostatistics, University of Copenhagen, Copenhagen, Denmark}
 
 \begin{document}
 
-%% NEW
-
-\journaltitle{Journal of the Royal Statistical Society Series B: Statistical
-  Methodology} %
-\DOI{DOI HERE} %
-\copyrightyear{xxxx} %
-\pubyear{yyyy}
-\access{Advance Access Publication Date: Day Month Year}
-\appnotes{Paper}
-
-
-\firstpage{1}
-
-%\subtitle{Subject Section}
-
-\title[The state learner]{The state learner -- a super learner for
-  right-censored data}
-
-\author[1,$\ast$]{Anders Munch}
-\author[1]{Thomas A.\ Gerds}
-
-\authormark{Munch et al.}
-
-\address[1]{\orgdiv{Section of Biostatistics}, \orgname{University of
-    Copenhagen}, \orgaddress{\street{Østerfarigmagsgade 5}, \postcode{2100}, \state{Copenhagen}, \country{Denmark}}}
-
-\corresp[$\ast$]{Corresponding author. \href{email:email-id.com}{a.munch@sund.ku.dk}}
-
-% \received{Date}{0}{Year}
-% \revised{Date}{0}{Year}
-% \accepted{Date}{0}{Year}
-
-
-\abstract{In survival analysis, prediction models are needed as stand-alone
-  tools and in applications of causal inference to estimate nuisance parameters.
-  The super learner is a machine learning algorithm which combines a library of
-  prediction models into a meta learner based on cross-validated loss. In right
-  censored data, loss needs to be estimated somehow.
-  % based on a model for the censoring distribution. Unfortunately, the commonly
-  % used partial likelihood loss is not suited for super learning, and inverse
-  % probability of censoring weighted loss functions require a pre-specified
-  % estimator of the censoring distribution. To relax this,
-  We introduce the state learner, a new super learner for survival analysis,
-  which simultaneously evaluates libraries of prediction models for the event of
-  interest and the censoring distribution. The state learner can be applied to
-  all types of survival models, works in the presence of competing risks, and
-  does not require a single pre-specified estimator of the conditional censoring
-  distribution. We establish an oracle inequality for the state learner and
+\begin{abstract}
+  In survival analysis, prediction models are needed as stand-alone
+  tools and in applications of causal inference to estimate nuisance
+  parameters. The super learner is a machine learning algorithm which
+  combines a library of prediction models into a meta learner based on
+  cross-validated loss. In right censored data, loss needs to be estimated somehow.
+  % based on a model for the censoring distribution.
+  % Unfortunately, the
+  % commonly used partial likelihood loss is not suited for super learning, and
+  % inverse probability of censoring weighted loss functions require a
+  % pre-specified estimator of the censoring distribution. To relax this,
+  We introduce the state learner, a new super learner for survival analysis, which
+  simultaneously evaluates libraries
+  of prediction models for the event of interest and the censoring
+  distribution. The state learner can
+be applied to all types of survival models, works in the presence
+of competing risks, and does not require a single pre-specified
+estimator of the conditional censoring distribution.
+  We establish an oracle inequality for the state learner and
   investigate its performance through numerical experiments. We illustrate how
   the state learner allows us to estimate causal effects in a competing risks
   setting without having to pre-specify models for neither the cause-specific
-  hazards of interest nor the censoring distribution.}
+  hazards of interest nor the censoring distribution.
+\end{abstract}
 
 \keywords{Competing risks, cross-validation, loss based estimation,
   right-censored data, super learner}
-
-\maketitle
 
 \section{Introduction}
 \label{sec:introduction}
@@ -534,7 +461,7 @@ At time \(t\), we observe that each individual is in one of four
 mutually exclusive states (Figure \ref{fig:multi-state-process}).
 \begin{figure}[h]
   \centering %
-  \includeFigCond[width=.3\textwidth]{figure-multi-state-process.pdf}
+  \includeFigCond[width=.5\textwidth]{figure-multi-state-process.pdf}
   \caption{Illustration of the multi-state process \(\eta\) used by
     the state learner. Note that `censored' is a state, hence the
     process is always observed at any time.}
@@ -752,7 +679,7 @@ Corollary~\ref{cor:oracle-prop} has the following asymptotic consequences.
   \( n \in \N \), such that
   \( \E_{P_0}{\left[ \Vert \phi_n(\data_n^{-k}) - F_{0} \Vert_{P_0}^2 \right]} =
   \bigO(n^{-\alpha}) \), for some \( \alpha\leq 1 \).
-  \begin{enumerate}
+  \begin{enumerate}[label=(\roman*), topsep=0pt]
   \item If $\alpha=1$ then
     \( \E_{P_0}{\left[ \Vert \hat{\phi}_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2
       \right]} = \bigO(\log(n)n^{-1}) \).
@@ -1243,7 +1170,7 @@ performance of the oracle, except for small sample sizes.
 
 \begin{figure}
   \centering %
-  \includeFigCond[width=.8\linewidth]{experiment-fig-sl-ipcw.pdf}
+  \includeFigCond[width=1\linewidth]{experiment-fig-sl-ipcw.pdf}
   \caption[]{For the risk prediction models provided by each of the super
     learners, the IPA is plotted against sample size. The results are averages across 
     1000 simulated data sets and the error bars are used to quantify the Monte Carlo
@@ -1269,7 +1196,7 @@ similar or higher IPA compared to the prediction models selected by
 \texttt{survSL}.
 \begin{figure}
   \centering %
-  \includeFigCond[width=.8\linewidth]{experiment-fig-sl-survSL-out.pdf}
+  \includeFigCond[width=1\linewidth]{experiment-fig-sl-survSL-out.pdf}
   \caption[]{For the risk prediction models of the outcome provided by each
     of the super learners, the IPA at the fixed time horizon is plotted against
     sample size. The results are averages across 1000 repetitions and the error
@@ -1279,7 +1206,7 @@ similar or higher IPA compared to the prediction models selected by
 
 \begin{figure}
   \centering %
-  \includeFigCond[width=.5\linewidth]{experiment-fig-sl-survSL-cens.pdf}
+  \includeFigCond[width=.7\linewidth]{experiment-fig-sl-survSL-cens.pdf}
   \caption[]{For the risk prediction models of the censoring model provided by
     each of the super learners, the IPA at the fixed time horizon is plotted
     against sample size. The results are averages across 1000 repetitions and
@@ -1355,7 +1282,7 @@ forest is used to model the censoring distribution.
 
 \begin{figure}
   \centering %
-  \includeFigCond[width=.9\linewidth]{zelefski-real-data.pdf}
+  \includeFigCond[width=1\linewidth]{zelefski-real-data.pdf}
   \caption[]{The results of applying the 125 combinations of learners to the
     prostate cancer data set. The learners are \texttt{KM} (KM), \texttt{Cox
       strata CS} (strata), \texttt{Lasso} (lasso), \texttt{Elastic} (elastic),
@@ -1393,7 +1320,7 @@ significant from zero.
 
 \begin{figure}
   \centering%
-  \includeFigCond[width=.8\linewidth]{zelefsky-data-target-par.pdf}
+  \includeFigCond[width=1\linewidth]{zelefsky-data-target-par.pdf}
   \caption[]{Estimates of the average treatment effect of hormone therapy on the
     risk of tumor recurrence and death obtained from the prostate cancer study
     analyzed by \cite{kattan2000pretreatment}. The estimates are based on the
@@ -1476,7 +1403,7 @@ simulation studies.
 
 
 
-\begin{appendices}
+\appendix
 
 \section{Theoretical guarantees for the state learner}
 \label{sec:proof-proposition}
@@ -1830,9 +1757,6 @@ $\tilde\Psi(\hat{\Lambda}_n, \hat{\Gamma}_n, \hat{H}_n)$.
   three remaining terms which gives the result.
 \end{proof}
 
-\end{appendices}
-
-\bibliographystyle{abbrvnat}
 \bibliography{bib.bib}
 
 \end{document}
