--- a/tex/jrss-version/state-learner-jrss-style.tex
+++ b/tex/jrss-version/state-learner-jrss-style.tex
@@ -607,8 +607,6 @@ for \( F \):
   \phi_{a_1,a_2, b}(\data_n)(t,0,x) &= 1
                                       - \phi_{a_1,a_2, b}(\data_n)(t,1,x)
                                       - \phi_{a_1,a_2, b}(\data_n)(t,2,x)
-  \\
-  & \qquad
     -\phi_{a_1,a_2, b}(\data_n)(t,-1,x)
 \end{align*}
 To evaluate how well a function \( F \) predicts the observed
@@ -726,8 +724,8 @@ In the following we let the space \( \mathcal{H}_{\mathcal{P}} \) be equipped wi
     \E_{P_0}{\left[ \Vert \hat{\phi}_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2 \right]}
     & \leq (1 + 2\delta)
       \E_{P_0}{\left[ \Vert \tilde{\phi}_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2 \right]}
-    \\
-    & \quad
+    % \\
+    % & \quad
       + (1+ \delta) 16   K \tau
       \left(
       13 + \frac{12}{\delta}
@@ -936,7 +934,7 @@ where \( \empmeas \) is the empirical measure of a data set
 Under suitable regularity conditions
 we have the
 following asymptotic expansion of the one-step estimator
-\citep{pfanzagl1985contributions,van2003unified,fisher2021visually,kennedy2022semiparametric,rytgaard2022continuous},
+\citep{pfanzagl1985contributions,van2003unified,fisher2021visually,kennedy2022semiparametric},
 \begin{equation*}
   \hat{\Psi}_{\text{OS}}(\data_n)- \Psi(P)
   =  \empmeas{[\psi(\blank ; \Lambda_1, \Lambda_2, \Gamma)]}
@@ -1189,7 +1187,7 @@ function of the censoring time, we mean that the learner is trained on
 \( \data_n^c \).
 
 We compare the state learner to two IPCW based super learners: The
-first superlearner, called IPCW(Cox), uses a Cox model with main
+first super learner, called IPCW(Cox), uses a Cox model with main
 effects to estimate the censoring probabilities, while the second
 super learner, called IPCW(KM), uses the Kaplan-Meier estimator to
 estimate the censoring probabilities. The Cox model for the censoring
@@ -1207,10 +1205,10 @@ independent. Both IPCW super learners are fitted using the
 %
 The IPCW super learners use the integrated Brier score up to a fixed time
 horizon (36 months). The marginal risk of the event before this time horizon is
-\(\sim 24.6\)\%. Under the ``dependent censoring'' setting the marginal censoring
-probability before the time horizon is \(\sim 61.9\)\%. Under the ``independent
-censoring'' setting the marginal censoring probability before this time horizon
-is \(\sim 38.7\)\%.
+\(\approx 24.6\)\%. Under the ``dependent censoring'' setting the marginal
+censoring probability before the time horizon is \(\approx 61.9\)\%. Under the
+``independent censoring'' setting the marginal censoring probability before this
+time horizon is \( \approx 38.7 \)\%.
 
 Each super learner provides a learner for the cumulative hazard function for the
 outcome of interest. From the cumulative hazard function a risk prediction model
@@ -1306,7 +1304,7 @@ recurrence \( \Lambda_1 \), the cumulative hazard function of death
 without tumor recurrence \( \Lambda_2 \), and the cumulative hazard
 function of the conditional censoring distribution $\Gamma$. 
 We then use the highest ranked combination
-of learners and apply formula \ref{eq:one-step-comp-ate}.
+of learners and apply formula~\eqref{eq:one-step-comp-ate}.
 
 
 \begin{table}
@@ -1351,7 +1349,7 @@ forest is used to model the censoring distribution.
 
 \begin{figure}
   \centering %
-  \includeFigCond[width=.9\linewidth]{zelefski-real-data.pdf}
+  \includeFigCond[width=.9\linewidth]{real-data-state-learner.pdf}
   \caption[]{The results of applying the 125 combinations of learners to the
     prostate cancer data set. The learners are \texttt{KM} (KM), \texttt{Cox
       strata CS} (strata), \texttt{Lasso} (lasso), \texttt{Elastic} (elastic),
@@ -1370,7 +1368,7 @@ forest is used to model the censoring distribution.
     learners of \( \Lambda_1 \), \( \Lambda_2 \), and $\Gamma$ as `Tumor
     learner', `Death learner', and `Censoring learner', respectively.}
   \centering
-  \input{./zel-tab.tex}
+  \input{./real-data-tab.tex}
 \end{table}
 
 
@@ -1389,7 +1387,7 @@ significant from zero.
 
 \begin{figure}
   \centering%
-  \includeFigCond[width=.8\linewidth]{zelefsky-data-target-par.pdf}
+  \includeFigCond[width=.8\linewidth]{real-data-target.pdf}
   \caption[]{Estimates of the average treatment effect of hormone therapy on the
     risk of tumor recurrence and death obtained from the prostate cancer study
     analyzed by \cite{kattan2000pretreatment}. The estimates are based on the
@@ -1514,20 +1512,20 @@ Define
   \end{equation*}
 \end{proof}
 
-\begin{proof}[Proof of Proposition~\ref{prop:stric-prop}]
+\begin{proof}[Proof of Proposition~\ref{prop:stric-prop}.]
   The result follows from Lemma~\ref{lemma:norm}.
 \end{proof}
 
-In the following, let $\Theta$ denote the function space consisting of all
-conditional state occupation probability functions for some measure \( P \) as
-defined in equation~(\ref{eq:F-def}).
+Recall that $\mathcal{H}_{\mathcal{P}}$ denote the function space consisting of
+all conditional state occupation probability functions for some measure
+\( P \in \mathcal{P} \).
 
-\begin{proof}[Proof of Corollary~\ref{cor:oracle-prop}]
+\begin{proof}[Proof of Corollary~\ref{cor:oracle-prop}.]
   First note that minimising the loss \( \bar{B}_{\tau} \) is equivalent to
   minimising the loss \( \bar{B}_{\tau,0} \), so the discrete super learner and
   oracle according to \( \bar{B}_{\tau} \) and \( \bar{B}_{\tau,0} \) are
   identical. By Lemma~\ref{lemma:norm}, \( R_0(F) \geq 0 \) for any
-  \( F \in \Theta \), and so using Theorem 2.3 from \citep{vaart2006oracle} with
+  \( F \in \mathcal{H}_{\mathcal{P}} \), and so using Theorem 2.3 from \citep{vaart2006oracle} with
   \( p=1 \), we have that for all \( \delta >0 \),
 \begin{align*}
   \E_{P_0}{\left[ R_0(\hat{\phi}_n(\data_n^{-k})) \right]}
@@ -1535,7 +1533,7 @@ defined in equation~(\ref{eq:F-def}).
   &(1+2\delta)\E_{P_0}{\left[ R_0(\tilde{\phi}_n(\data_n^{-k})) \right]}
   \\
   & \quad + (1+\delta) \frac{16 K}{n}
-    \log(1 + |\mathcal{F}_n|)\sup_{F \in \Theta}
+    \log(1 + |\mathcal{F}_n|)\sup_{F \in \mathcal{H}_{\mathcal{P}}}
     \left\{
     M(F) + \frac{v(F)}{R_0(F)}
     \left(
@@ -1543,10 +1541,10 @@ defined in equation~(\ref{eq:F-def}).
     \right)
     \right\}
 \end{align*}
-where for each \( F \in \Theta \), \( (M(F), v(F)) \) is some Bernstein pair for
+where for each \( F \in \mathcal{H}_{\mathcal{P}} \), \( (M(F), v(F)) \) is some Bernstein pair for
 the function \(o \mapsto \bar{B}_{\tau,0}(F, o) \). As
 \( \bar{B}_{\tau,0}(F, \blank) \) is uniformly bounded by \( \tau \) for any
-\( F \in \Theta \), it follows from section 8.1 in \citep{vaart2006oracle} that
+\( F \in \mathcal{H}_{\mathcal{P}} \), it follows from section 8.1 in \citep{vaart2006oracle} that
 \( (\tau, 1.5 P_0{[\bar{B}_{\tau,0}(F, \blank)^2]}) \) is a Bernstein pair for
 \( \bar{B}_{\tau,0}(F, \blank) \). Now, for any \( a,b,c \in \R \) we have
 \begin{align*}
@@ -1620,7 +1618,7 @@ Lemma~\ref{lemma:norm}
 \end{equation*}
 and so using the Bernstein pairs \( (\tau, 1.5 P_0{[\bar{B}_{\tau,0}(F, \blank)^2]}) \) we have
 \begin{equation*}
-  \sup_{F \in \Theta}
+  \sup_{F \in \mathcal{H}_{\mathcal{P}}}
   \left\{
     M(F) + \frac{v(F)}{R_0(F)}
     \left(
@@ -1647,7 +1645,7 @@ For all $\delta>0$ we thus have
 and then the final result follows from Lemma~\ref{lemma:norm}.
 \end{proof}
 
-\begin{proof}[Proof of Corollary~\ref{cor:asymp-cons}]
+\begin{proof}[Proof of Corollary~\ref{cor:asymp-cons}.]
   By definition of the oracle and Lemma~\ref{lemma:norm},
   \begin{equation*}
     \E_{P_0}{\left[ \Vert \tilde{\phi}_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2
@@ -1667,7 +1665,7 @@ $\bar\Psi(\hat{F}_n, \hat{H}_n)$ is used instead of
 $\tilde\Psi(\hat{\Lambda}_n, \hat{\Gamma}_n, \hat{H}_n)$.
 
 
-\begin{proof}[Proof of Proposition~\ref{prop:dr-structure}]
+\begin{proof}[Proof of Proposition~\ref{prop:dr-structure}.]
   For notational convenience we suppress \( X \) in the following. The final
   result can be obtained by adding the argument \( X \) to all functions and
   averaging. We use the relations from equation~(\ref{eq:7}) to write
