first round of typos

--- a/tex/jrss-version/state-learner-jrss-style.tex
+++ b/tex/jrss-version/state-learner-jrss-style.tex
@@ -1372,7 +1372,6 @@ forest is used to model the censoring distribution.
 \end{table}
 
 
-
 We use the learners of the three cumulative hazard functions
 selected by the state learner and the estimator defined in
 Section~\ref{sec:cause-spec-aver}, equation~(\ref{eq:one-step-comp-ate}), to
@@ -1464,9 +1463,7 @@ in the time argument. This simplifies the calculation of \( F \) as the
 integrals in equation~(\ref{eq:transition}) reduce to sums. When $\Lambda_j$ or
 \( \Gamma \) are absolutely continuous in the time argument, calculating \( F \)
 is more involved, but we expect that a good approximation can be achieved by
-discretisation. In the future, we intend to investigate the performance of the
-state learner when using a broader library of learners in more comprehensive
-simulation studies.
+discretisation. 
 
 
 
