separate figures from article

--- a/tex/jrss-version/state-learner-jrss-style.tex
+++ b/tex/jrss-version/state-learner-jrss-style.tex
@@ -83,7 +83,7 @@
 % \bibliographystyle{rss}
 
 %% Toggle with or without figures
-% \def\nofig{1}
+\def\nofig{1}
 
 \newcommand{\includeFigCond}[2][]{
   \ifx\nofig\undefined %
